@@ -12,6 +12,8 @@ Revision history for Test-BrewBuild
         - Plugin::Simple v0.06 now required (fixes #28, #30)
         - documented $log as first param to a plugin (closes #35)
         - cleaned up SYNOPSIS (closes #38)
+        - add tests for --args param for plugins (closes #32)
+        -
 
 1.02    2016-03-24
         - default plugin now uses cpanm for all installs, rendering the build
